--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,30 @@
-# Environment Variables - NEVER COMMIT THIS FILE TO GIT!
+# ============================================
+# PRODUCTION ENVIRONMENT VARIABLES
+# ============================================
+# Copy this file to .env and fill in the values
+# NEVER commit the actual .env file to Git!
+# ============================================
 
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
-# JWT Configuration (Generate strong random secrets!)
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32-chars
-JWT_REFRESH_SECRET=your-refresh-token-secret-also-change-this-in-production
+# MongoDB Connection
+# Get a free cluster at https://www.mongodb.com/cloud/atlas
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/amazon-clone?retryWrites=true&w=majority
+
+# JWT Configuration - GENERATE STRONG RANDOM SECRETS!
+# Use: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=REPLACE_WITH_64_CHAR_RANDOM_SECRET
+JWT_REFRESH_SECRET=REPLACE_WITH_ANOTHER_64_CHAR_RANDOM_SECRET
 JWT_EXPIRES_IN=15m
 JWT_REFRESH_EXPIRES_IN=7d
 
 # Cookie Configuration
-COOKIE_SECRET=your-cookie-signing-secret-change-this-too
+COOKIE_SECRET=REPLACE_WITH_32_CHAR_RANDOM_SECRET
 
-# CORS Configuration
-FRONTEND_URL=http://localhost:5173
+# CORS - Frontend URL(s)
+FRONTEND_URL=https://your-app.vercel.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
