--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,17 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
         "bcryptjs": "^2.4.3",
-        "jsonwebtoken": "^9.0.2",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "helmet": "^7.1.0",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
         "express-validator": "^7.0.1",
-        "cookie-parser": "^1.4.6",
-        "dotenv": "^16.3.1",
+        "helmet": "^7.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongodb": "^7.0.0",
+        "mongoose": "^9.1.4",
         "uuid": "^9.0.1"
     },
     "devDependencies": {
