--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,7 +11,7 @@ NODE_ENV=production
 
 # MongoDB Connection
 # Get a free cluster at https://www.mongodb.com/cloud/atlas
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/amazon-clone?retryWrites=true&w=majority
+MONGODB_URI=YOUR_MONGODB_ATLAS_CONNECTION_STRING_HERE
 
 # JWT Configuration - GENERATE STRONG RANDOM SECRETS!
 # Use: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
